SONAR-17389 - Prevent project creation with existing key but different case